# AI-Fellowship-2026

Week 2/: .env.template  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Week 2/app/: __init__.py  crud.py  main.py  models.py  schemas.py
Week 2/app/core/: config.py  database.py  logger.py
Week 2/app/routers/: __init__.py  counts.py  customers.py
Week 2/docs/: reflection.md
Week 2/task1/: .env.template  README.md  docker-compose.yml  reflection.md
Week 2/task2/: README.md
Week 2/task3/: README.md
Week 3/: .gitignore  README.md
Week 3/task1/: .gitignore  README.md  docker-compose.yml
Week 3/task1/sql/: run_benchmark.py  sql_questions_only.csv
Week 3/task2/: .env.template  .gitignore  README.md  config.py  decomposed_queries.csv  decomposed_queries.json  query_decomposition.py  requirements.txt
Week 3/task3/: .env.example  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  evaluate.py  executor.py  requirements.txt  sql_generator.py  streamlit_app.py  validator.py
Week 3/task3/prompts/: __init__.py  templates.py
Week 3/task4/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  config.py  db.py  docker-compose.yml  main.py  requirements.txt  streamlit_app.py
Week 3/task4/agents/: __init__.py  executor.py  llm.py  planner.py  sql_generator.py  summarizer.py  validator.py
Week 5/: README.md  W5_Tree_Based_Models_&_Ensembles_Assignment(Royas_Shakya).ipynb  desktop.ini
Week 6/: README.md  W6_Probabilistic_Models_Assignment(Royas_Shakya).ipynb  telco_bayes_lr_v1.pkl
(+5 files in other folders)
